themes/claro/form/Select.css
/** dijit.form.Select **/

/* override button.css */
.claro .dijitSelect .dijitButtonNode {
	padding:0px;
	border-radius: 0;
	-moz-border-radius: 0;
	-webkit-border-radius: 0;
	box-shadow: 0px 0px 0px rgba(0,0,0,0);
	-webkit-box-shadow: 0px 0px 0px rgba(0,0,0,0);
	-moz-box-shadow: 0px 0px 0px rgba(0,0,0,0);
}
.claro .dijitSelect .dijitButtonNode {
	background: none;
	border: none;
}
/* end override */

.claro .dijitSelect .dijitButtonText {
	padding: 0px 5px 2px 5px;
}

/* normal status */
.claro .dijitSelect {
	border: 1px solid #b5bcc7;
	background-color: #f7fcff;
}
.dj_ie6 .claro .dijitSelect,
.dj_ie6 .claro .dijitSelect .dijitButtonNode {
	background-image:none;
}

.claro .dijitSelect .dijitButtonContents {
	border: 0px solid #b5bcc7;
	border-right-width: 1px;
}

.claro .dijitSelect .dijitArrowButton {
	padding: 0;
	border: 1px solid #fff;	/* inner white border on button node */
	border-top:none;
	background-color:#ebeef4;
	background-image: url("images/formHighlight.png");
	background-repeat:repeat-x;
}
.dj_ie8 .claro .dijitSelect .dijitArrowButton {
	border: none;	/* otherwise bottom and right part of outer (gray) border of button not visible */
}

.claro .dijitSelect .dijitArrowButton .dijitArrowButtonInner {
	background-image: url("images/commonFormArrows.png");
	background-position:-35px 70%;
	background-repeat: no-repeat;
	width:16px;
	height:100%;
	display:block;
}

/* hover status */
.claro .dijitSelectHover {
	border: 1px solid #769dc0;
	background-color: #e9f4fe;
	background-image: url('images/textBox_back.png');
	background-repeat: repeat-x;
}

.claro .dijitSelectHover .dijitButtonContents {
	border-color:#81a5c6;
}

.claro .dijitSelectHover .dijitArrowButton {
	background-color:#abd6ff;
}
.claro .dijitSelectHover .dijitArrowButton .dijitArrowButtonInner {
	background-position:-70px 70%;
}

/* focused status */
.claro .dijitSelectFocused {
	border: 1px solid #769dc0;
}
.claro .dijitSelectFocused .dijitButtonContents {
	border-color:#81a5c6;
}
.claro .dijitSelectFocused .dijitArrowButton {
	background-color:#7dbefa;
	background-position:0px -177px;
	border: none;
	padding: 0px 1px;
}
.claro .dijitSelectFocused .dijitArrowButton .dijitArrowButtonInner {
	background-position:-70px 70%;
	margin-bottom: 1px;
}

/* disable status */
.claro .dijitSelectDisabled {
	border: 1px solid #d3d3d3;
	background-color: #efefef;
	background-image: none;
	color: #818181;
}
.claro .dijitSelectDisabled .dijitArrowButton { 
	background-color: #efefef;
}
.claro .dijitSelectDisabled .dijitArrowButton .dijitArrowButtonInner {
	background-position:0px 70%
}

/* Dropdown menu style for select */

.claro .dijitSelectMenu td.dijitMenuItemIconCell,
.claro .dijitSelectMenu td.dijitMenuArrowCell { 
	/* so that arrow and icon cells from MenuItem are not displayed */
	display: none;  
}
.claro .dijitSelectMenu td.dijitMenuItemLabel {
	/* line up menu text with text in select box (in LTR and RTL modes) */
	padding-left: 5px;
	padding-right: 5px;
}

.claro .dijitSelectMenu .dijitMenuSeparatorTop {
	border-bottom:1px solid #769dc0;
}

